--- a/rentcar-be/package.json
+++ b/rentcar-be/package.json
@@ -16,7 +16,6 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "multer": "^1.4.5-lts.1",
-    "serve-index": "^1.9.1",
-    "uuid": "^9.0.0"
+    "serve-index": "^1.9.1"
   }
 }
